# pavics-sdi

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamllint.yaml  Dockerfile  LICENSE  README.md  README.rst  environment-dev.yml  environment.yml  genindex.html  includeme.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  releasenotes.html  requirements.txt  search.html  searchindex.js  setup.py  support.html  todo.html
.github/templates/: dagger-docker.yml
.github/workflows/: dagger-docker.yml  main.yml
CI/: dagger-pipeline.py
_modules/: index.html
_sources/: index.rst.txt  license.rst.txt  todo.rst.txt
_sources/arch/: backend.rst.txt  data_catalog.rst.txt  frontend.rst.txt  index.rst.txt  overview.rst.txt
_sources/dev/: builddocs.rst.txt  configuration.rst.txt  contributing.rst.txt  data_management.rst.txt  geoserver.rst.txt  index.rst.txt  installation.rst.txt  integration_tests.rst.txt
_sources/gui/: frontend.rst.txt  index.rst.txt
_sources/notebooks/: Untitled.ipynb.txt  index.rst.txt  owslib_wms.ipynb.txt
_sources/processes/: advanced_climate.rst.txt  basic_climate.rst.txt  impacts.rst.txt  indices.rst.txt  maintenance.rst.txt  visualization.rst.txt  workflows.rst.txt
_sources/provenance/: index.rst.txt
_sources/support/: index.rst.txt
_sources/tutorials/: ExercicesDay1PM.ipynb.txt  ExercicesDay2PM.ipynb.txt  SolutionsDay1PM.ipynb.txt  SolutionsDay2PM.ipynb.txt  Untitled.ipynb.txt  WFS_example.ipynb.txt  WPS_example.ipynb.txt  WPS_workflow_example.ipynb.txt  examples.rst.txt  frontend.rst.txt  index.rst.txt  opendap.ipynb.txt  owslib_intro.ipynb.txt  searching.rst.txt  tryme.ipynb.txt
_sources/workflows/: examples.rst.txt  index.rst.txt  realistic.rst.txt  vocabulary.rst.txt
_static/: includeme.html
arch/: backend.html  data_catalog.html  frontend.html  index.html  overview.html
ci/: dagger-pipeline.py
dev/: builddocs.html  configuration.html  contributing.html  data_management.html  geoserver.html  index.html  installation.html  integration_tests.html  load_balancing.html  permissions.html  vm.html
docs/: Makefile  regex_patterns.cfg  regez_patterns.cfg
docs/source/: conf.py  index.rst  license.rst  release_notes.rst  releasenotes.rst  support.rst
en/: .buildinfo  genindex.html  index.html  license.html  objects.inv  releasenotes.html  search.html  searchindex.js  todo.html
en/_modules/: index.html
en/arch/: backend.html  data_catalog.html  frontend.html  index.html  overview.html
en/dev/: builddocs.html  data_management.html  geoserver.html  index.html  installation.html  integration_tests.html  load_balancing.html  vm.html
en/processes/: advanced_climate.html  basic_climate.html  data_handling.html  impacts.html  index.html  indices.html  maintenance.html  visualization.html  workflows.html
en/provenance/: index.html
en/support/: index.html
en/tutorials/: index.html  searching.html
en/workflows/: examples.html  index.html  schema.html  vocabulary.html
fr/: .buildinfo  genindex.html  index.html  license.html  objects.inv  releasenotes.html  search.html  searchindex.js  support.html  todo.html
fr/_modules/: index.html
fr/_sources/: index.rst.txt  releasenotes.rst.txt
fr/_static/: documentation_options.js
fr/arch/: backend.html  data_catalog.html  frontend.html  index.html  overview.html
fr/dev/: builddocs.html  configuration.html  contributing.html  data_management.html  geoserver.html  index.html  installation.html  vm.html  (+3 more)
gui/: frontend.html  index.html
notebooks/: Untitled.html  climate_indices.html  index.html  opendap.html  owslib_wms.html  rendering.html  subsetting.html
pavics_sdi/: __init__.py
processes/: advanced_climate.html  basic_climate.html  bias_correction.html  data_handling.html  impacts.html  index.html  indices.html  maintenance.html  visualization.html  workflows.html
provenance/: index.html
support/: index.html
tests/: conftest.py
tutorials/: ExercicesDay1PM.html  ExercicesDay2PM.html  SolutionsDay1PM.html  SolutionsDay2PM.html  Untitled.html  WCS_example.html  WFS_example.html  WPS_example.html  WPS_workflow_example.html  bias_correction.html  data_preparation.html  examples.html  frontend.html  index.html  opendap.html  owslib_intro.html  searching.html  tryme.html  wps_with_python.html
workflows/: examples.html  index.html  realistic.html  schema.html  vocabulary.html
(+309 files in other folders)
