[build-system]
requires = ["flit_core >=3.11.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pavics_sdi"
requires-python = ">=3.10"
authors = [
  {name = "CRIM/Ouranos", email = "pavics@ouranos.ca"}
]
maintainers = [
  {name = "Tuan Long Vu", email = "vu.long@ouranos.ca"},
  {name = "David Huard", email = "huard.david@ouranos.ca"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"},
  {name = "Francis Charette-Migneault", email = "francis.charette-migneault@crim.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
description = "Scientific gateway for climate data analytics."
license = "BSD-3-Clause"
license_file = ["LICENSE"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
docs = [
  "aiohttp",
  "birdhouse-birdy",
  "cartopy",
  "cf-xarray >=0.10.4",
  "clisops >=0.16.1",
  "dask >=2024.8.1",
  "esgf-pyclient",
  "fiona",
  "furo >=2024.04.27",
  "geopandas >=1.0",
  "holoviews",
  "hvplot",
  "intake",
  "intake-esm",
  "ipyleaflet",
  "ipython",
  "jinja2",
  "jupyter",
  "jupytext",
  "matplotlib",
  "myst-nb",
  "myst-parser",
  "nbsphinx",
  "nbval",
  "netcdf4",
  "numba >=0.58.0",
  "numpy >=1.25.0",
  "owslib",
  "pip >=25.2",
  "pydap",
  "psutil",
  "pyogrio",
  "readthedocs-sphinx-ext",
  "requests",
  "requests-magpie",
  "shapely>=2.0",
  "siphon",
  "sphinx-codeautolink >=0.16.2",
  "sphinx-copybutton",
  "sphinx-intl",
  "sphinx-jsonschema",
  "sphinx >=8.2.0",
  "sphinxext-opengraph",
  "urllib3",
  "webob",
  "xarray >=2023.11.0",
  "xclim >=0.57.0",
  "xesmf !=0.8.8",
  "xscen >=0.12.1",
  "xsdba >=0.4.0"
]
dagger = [
  "anyio",
  "dagger-io"
]

[project.urls]
"Homepage" = "https://pavics-sdi.readthedocs.io"
"Source" = "https://github.com/Ouranosinc/pavics-sdi/"
"Changelog" = "https://pavics-sdi.readthedocs.io/en/latest/release_notes.html"
"Issue tracker" = "https://github.com/Ouranosinc/pavics-sdi/issues"
"About CRIM" = "https://www.crim.ca/en/"
"About Ouranos" = "https://www.ouranos.ca/en/"

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "docs/source/notbooks"
]
